--- a/colourtool.css
+++ b/colourtool.css
@@ -1,4 +1,8 @@
 #colourtool {
-    width: 600px;
-    margin:50px auto;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: 0.8;
+    z-index: 99999;
 }
