--- a/colourtool.css
+++ b/colourtool.css
@@ -8,8 +8,13 @@
     top:0;
     left:0;
 }
-p.colour {
+#colourtool #inner {
+    width:800px;
+    margin: 0 auto;
+}
+#colourtool p.colour {
     width: 50px;
     height: 50px;
     float: left;
+    margin:10px;
 }
