--- a/colourtool.css
+++ b/colourtool.css
@@ -19,8 +19,8 @@ html, body {
     overflow:auto;
 }
 #colourtool p.colour {
-    width: 50px;
-    height: 50px;
+    width: 110px;
+    padding: 15px;
     float: left;
     margin:10px;
 }
