--- a/colourtool.css
+++ b/colourtool.css
@@ -7,13 +7,14 @@ html, body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #fff;
-    opacity: 1;
+    background-color: #000;
+    opacity: 0.7;
     z-index: 99999;
     top:0;
     left:0;
 }
 #colourtool #inner {
+    background-color: #fff;
     width:800px;
     margin: 0 auto;
     overflow:auto;
@@ -23,7 +24,7 @@ html, body {
     padding: 15px;
     float: left;
     margin:10px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
 }
