--- a/colourtool.css
+++ b/colourtool.css
@@ -7,11 +7,18 @@ html, body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #000;
-    opacity: 0.7;
     z-index: 99999;
     top:0;
     left:0;
+}
+#colourtool #overlay {
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background-color: #000;
+    opacity: 0.7;
 }
 #colourtool #inner {
     background-color: #fff;
