--- a/colourtool.css
+++ b/colourtool.css
@@ -4,6 +4,8 @@ html, body {
     height:100%;
 }
 #colourtool {
+    
+    text-align: left;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -33,6 +35,7 @@ html, body {
     margin-top:50px;
 }
 #colourtool p.colour {
+    text-align: center;
     width: 110px;
     padding: 15px;
     float: left;
