--- a/colourtool.css
+++ b/colourtool.css
@@ -46,8 +46,8 @@ html, body {
 }
 #colourtool #closeButton {
     position: absolute;
-    top:0;
-    right:0;
+    top:10px;
+    right:10px;
     background-color:#ff0000;
     color:#ff0000;
     padding:10px;
