--- a/colourtool.css
+++ b/colourtool.css
@@ -46,13 +46,12 @@ html, body {
 }
 #colourtool #closeButton {
     position: absolute;
-    top:10px;
-    right:10px;
-    background-color:#ff0000;
+    top:0px;
+    right:0px;
     color:#ff0000;
     padding:10px;
 }
 #colourtoool #closeButton a {
-    color:#fff;
-    text-decoration:none;
+    color: #ff0000;
+    text-decoration: none;
 }
