added check for style tags

--- a/colourtool.css
+++ b/colourtool.css
@@ -51,7 +51,7 @@ html, body {
     color:#ff0000;
     padding:10px;
 }
-#colourtoool #closeButton a {
+#colourtool #closeButton a {
     color: #ff0000;
     text-decoration: none;
 }
