added check for style tags

--- a/colourtool.css
+++ b/colourtool.css
@@ -5,6 +5,7 @@ html, body {
 }
 #colourtool {
     
+    font-family: Helvetica,Arial,sans-serif;
     font-size: 12px;
     text-align: left;
     position: absolute;
