--- a/colourtool.css
+++ b/colourtool.css
@@ -64,3 +64,7 @@ html, body {
     color: #ff0000;
     text-decoration: none;
 }
+#colourtool #footer {
+    margin-top:30px;
+    text-align: center;
+}
