--- a/colourtool.css
+++ b/colourtool.css
@@ -65,6 +65,7 @@ html, body {
     text-decoration: none;
 }
 #colourtool #footer {
-    margin-top:30px;
+    padding-top:30px;
     text-align: center;
+    clear:both;
 }
