--- a/colourtool.css
+++ b/colourtool.css
@@ -71,7 +71,7 @@ html, body {
     font-weight: bold;
     font-style: italic;
 }
-#colourtoool #errors p.error {
+#colourtool #errors .error {
     padding:10px;
     background-color: #ff0000;
     color: #fff;
