--- a/colourtool.css
+++ b/colourtool.css
@@ -77,6 +77,10 @@ html, body {
     color: #fff;
 }
 #colourtool #footer {
+    background: 0 none;
+    border: 0 none;
+    margin:0;
+    padding:0;
     padding-top:30px;
     text-align: center;
     clear:both;
