--- a/colourtool.css
+++ b/colourtool.css
@@ -74,8 +74,9 @@ html, body {
 #colourtool #errors .error {
     clear: both;
     padding:10px;
-    background-color: #ff0000;
+    background-color: #ff3333;
     color: #fff;
+    font-weight: bold;
 }
 #colourtool #footer {
     background: 0 none;
