--- a/colourtool.css
+++ b/colourtool.css
@@ -81,6 +81,7 @@ html, body {
     background-color: #ff3333;
     color: #fff;
     font-weight: bold;
+    margin: 10px 0;
 }
 #colourtool #errors .error.resolved {
     background-color: #009900;
